templates/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress
spec:
  selector:
    app: "mongoexpress"
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: LoadBalancer
