templates/mongo-service.yaml
# mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo  
  namespace: ingress-nginx
spec:
  selector:
    app: mongo  # label that matches your MongoDB deployment
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
