templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:390402544911:certificate/YOUR_CERT_ID
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: www.nginx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoexpress
                port:
                  number: 8081
